--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lk.gov.health.thk</groupId>
-    <artifactId>hrgalle</artifactId>
+    <artifactId>hrcssp</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
 
-    <name>hrgalle</name>
+    <name>hrcssp</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
